# react-native-nitro-net

./: .gitignore  .npmignore  README.md  README_zh.md  nitro.json  package.json  react-native-nitro-net.podspec  tsconfig.json
android/: CMakeLists.txt  OnLoad.cpp  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/margelo/nitro/net/: NitroNetPackage.java
cpp/: HybridHttpParser.hpp  HybridNetDriver.cpp  HybridNetDriver.hpp  HybridNetServerDriver.cpp  HybridNetServerDriver.hpp  HybridNetSocketDriver.cpp  HybridNetSocketDriver.hpp  NetBindings.hpp  NetManager.hpp
docs/: compatibility_audit.md  compatibility_audit_http.md  compatibility_audit_https.md  compatibility_audit_net.md  compatibility_audit_tls.md
ios/Frameworks/RustCNet.xcframework/: Info.plist
ios/Frameworks/RustCNet.xcframework/ios-arm64/RustCNet.framework/: Info.plist  RustCNet
ios/Frameworks/RustCNet.xcframework/ios-arm64_x86_64-simulator/RustCNet.framework/: RustCNet
src/: Driver.ts  Net.nitro.ts  http.ts  https.ts  index.ts  net.ts  tls.ts
